--- a/aboutme.html
+++ b/aboutme.html
@@ -70,6 +70,15 @@ a {
   font-size: 40px;
   font-family: cursive;
 }
+#footer {
+  color:white;
+  position: relative;
+  left: 650px;
+}
+.carousel-caption > p,h4 {
+  text-shadow: 2px 2px black;
+}
+
 
 </style>
   </head>
@@ -107,7 +116,7 @@ a {
   </div>
 
     <h3><u>Growing up in the Bay</u></h3>
-    <p id="law">My name is Lawrence Chang. I am an upcoming coder coming out of SF, CA. I am beginning to learn html, css, and some javascript.  I enjoy how much control the coder has over the website and the more knowledge you have gained, the more interesting your page will be. It is a little confusing right now, but i am finding it fun and interesting. Some of my other hobbies include, surfing, driving, and learning new things.</p>
+    <p id="law">My name is Lawrence Chang. I am an upcoming coder coming out of SF, CA. I am beginning to learn html, css, and some javascript.  I enjoy how much control the coder has over the website and the more knowledge you gain, the more interesting your page will be. It is a little confusing and challenging right now, but i am finding it fun and interesting. Some of my other hobbies include, surfing, driving my fox, and learning new things.</p>
     <br>
     <p id="boutme"><u> Heres some pics about me:</u></p>
   <header>
@@ -128,14 +137,14 @@ a {
         <div class="carousel-item">
           <img class="d-block w-100" src="http://i.cdn-surfline.com/surfnews/images/2014/01_january/norcal_swell/full/sf-1220-131230-Ryan-Chachi-Craig.jpg" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
-            <h5 style="font-size: 200%">Ocean Beach</h5>
+            <h4 style="font-size: 200%">Ocean Beach</h4>
             <p style="font-size: 150%; padding:none;">Surf Sanctuary</p>
           </div>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="http://www.theextremescene.com/theextremescene.com/sites/default/files/image/Fort%20Point.jpg" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
-            <h6 style="font-size: 200%">Ft Point</h6>
+            <h4 style="font-size: 200%">Ft Point</h4>
             <p style="font-size: 150%">locals only</p>
           </div>
         </div>
@@ -154,12 +163,19 @@ a {
   <main>
 
   </main>
-  <footer>
+  <footer id="footer" class="wrapper style1-alt">
+    <div class="inner">
 
+        &copy;LawCodes | Design Date: 2018
+
+    </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
