--- a/contacts.html
+++ b/contacts.html
@@ -46,7 +46,11 @@ a {
   color: #808080;
   margin-left: 10px;
 }
-
+#footer {
+  position: relative;
+  left: 650px;
+  color: white;
+}
 
 
 </style>
@@ -94,6 +98,13 @@ a {
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 </header>
+<footer id="footer" class="wrapper style1-alt">
+  <div class="inner">
+
+      &copy;LawCodes | Design Date: 2018
+
+  </div>
+</footer>
 
   </body>
 </html>
