--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Who I am</a></li>
 							<li><a href="#two">What I do</a></li>
+							<li><a href="#three">My Info</a></li>
 							<li><a href="/aboutme.html">about lawcodes</a></li>
 							<li><a href="/contacts.html">Contact me</a></li>
 						</ul>
@@ -138,7 +139,7 @@
 
 				<!-- Three -->
 
-								<section>
+								<section id="three">
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
