--- a/aboutme.html
+++ b/aboutme.html
@@ -71,7 +71,7 @@ a {
   font-family: cursive;
 }
 #footer {
-  color:white;
+  color: white;
   position: relative;
   left: 650px;
 }
@@ -116,7 +116,7 @@ a {
   </div>
 
     <h3><u>Growing up in the Bay</u></h3>
-    <p id="law">My name is Lawrence Chang. I am an upcoming coder coming out of SF, CA. I am beginning to learn html, css, and some javascript.  I enjoy how much control the coder has over the website and the more knowledge you gain, the more interesting your page will be. It is a little confusing and challenging right now, but i am finding it fun and interesting. Some of my other hobbies include, surfing, driving my fox, and learning new things.</p>
+    <p id="law">My name is Lawrence Chang. I am an upcoming coder coming out of SF, CA. I am beginning to learn html, css, and some javascript.  I enjoy how much control the coder has over the website and the more knowledge you gain, the more interesting your page will be. It is a little confusing and challenging sometimes, but I am finding it fun and interesting. Some of my other hobbies include, surfing, driving my fox, and learning new things.</p>
     <br>
     <p id="boutme"><u> Heres some pics about me:</u></p>
   <header>
